# yet-another-discord-alternative

./: .gitignore  CMakeLists.txt  build_script.sh
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
server/: CMakeLists.txt  client.cpp  client.h  clientthread.cpp  clientthread.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h  worker.cpp  worker.h
